--- a/site/about.html
+++ b/site/about.html
@@ -19,10 +19,10 @@
 
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
-                        <li><a href="courses.html" class="nav-link">Courses</a></li>
-                        <li><a href="certificates.html" class="nav-link">Certificates & Permits</a></li>
-                        <li><a href="about.html" class="nav-link active">About Us</a></li>
-                        <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+                        <li><a href="courses.html" class="nav-link" data-translate="nav-courses">Courses</a></li>
+                        <li><a href="certificates.html" class="nav-link" data-translate="nav-certificates">Certificates & Permits</a></li>
+                        <li><a href="about.html" class="nav-link active" data-translate="nav-about">About Us</a></li>
+                        <li><a href="contact.html" class="nav-link" data-translate="nav-contact">Contact Us</a></li>
                     </ul>
 
                     <div class="header-actions">
@@ -31,7 +31,7 @@
                             <button class="lang-btn" data-lang="en">🇺🇸</button>
                         </div>
                         <a href="#instructor-login" class="btn btn-instructor">
-                            <i class="fas fa-user"></i> Oktatói Felület
+                            <i class="fas fa-user"></i> <span data-translate="instructor-login">Oktatói Felület</span>
                         </a>
                     </div>
                 </nav>
@@ -48,8 +48,8 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Rólunk</h1>
-            <p>Ismerj meg minket, csapatunkat és küldetésünket</p>
+            <h1 data-translate="page-about-title">Rólunk</h1>
+            <p data-translate="page-about-subtitle">Ismerj meg minket, csapatunkat és küldetésünket</p>
         </div>
     </section>
 
@@ -58,9 +58,9 @@
         <div class="container">
             <div class="about-intro">
                 <div class="intro-text">
-                    <h2>A Hajós Akadémia Története</h2>
-                    <p>A Hajós Akadémia több évtizedes tapasztalattal rendelkezik a vízi közlekedési oktatás terén. 1985-ben alapítottuk azzal a céllal, hogy magas színvonalú, nemzetközi sztenderdeknek megfelelő hajózási képzéseket nyújtsunk Magyarországon.</p>
-                    <p>Az évek során több mint 10,000 sikeres vizsgázót bocsátottunk ki, akik ma a vízi közlekedés különböző területein tevékenykednek - a rekreációs hajózástól kezdve a professzionális kereskedelmi hajózásig.</p>
+                    <h2 data-translate="about-history-title">A Hajós Akadémia Története</h2>
+                    <p data-translate="about-history-p1">A Hajós Akadémia több évtizedes tapasztalattal rendelkezik a vízi közlekedési oktatás terén. 1985-ben alapítottuk azzal a céllal, hogy magas színvonalú, nemzetközi sztenderdeknek megfelelő hajózási képzéseket nyújtsunk Magyarországon.</p>
+                    <p data-translate="about-history-p2">Az évek során több mint 10,000 sikeres vizsgázót bocsátottunk ki, akik ma a vízi közlekedés különböző területein tevékenykednek - a rekreációs hajózástól kezdve a professzionális kereskedelmi hajózásig.</p>
                 </div>
                 <div class="intro-image">
                     <img src="https://via.placeholder.com/500x400?text=Hajós+Akadémia" alt="Hajós Akadémia">
@@ -72,21 +72,21 @@
                     <div class="icon-box">
                         <i class="fas fa-bullseye"></i>
                     </div>
-                    <h3>Misszió</h3>
-                    <p>Célunk, hogy korszerű, biztonságos és hatékony képzésekkel segítsük a jövő hajósait és kapitányait. Elkötelezettek vagyunk amellett, hogy oktatásaink megfeleljenek mind a magyar, mind a nemzetközi szabványoknak.</p>
+                    <h3 data-translate="about-mission-title">Misszió</h3>
+                    <p data-translate="about-mission-desc">Célunk, hogy korszerű, biztonságos és hatékony képzésekkel segítsük a jövő hajósait és kapitányait. Elkötelezettek vagyunk amellett, hogy oktatásaink megfeleljenek mind a magyar, mind a nemzetközi szabványoknak.</p>
                 </div>
 
                 <div class="vision">
                     <div class="icon-box">
                         <i class="fas fa-eye"></i>
                     </div>
-                    <h3>Vízió</h3>
-                    <p>Magyarország vezető hajózási oktatási intézményeként szeretnénk továbbra is élenjárni a modern technológiák alkalmazásában és a legmagasabb színvonalú képzések nyújtásában.</p>
+                    <h3 data-translate="about-vision-title">Vízió</h3>
+                    <p data-translate="about-vision-desc">Magyarország vezető hajózási oktatási intézményeként szeretnénk továbbra is élenjárni a modern technológiák alkalmazásában és a legmagasabb színvonalú képzések nyújtásában.</p>
                 </div>
             </div>
 
             <div class="values-section">
-                <h2>Értékeink</h2>
+                <h2 data-translate="about-values-title">Értékeink</h2>
                 <div class="values-grid">
                     <div class="value-card">
                         <i class="fas fa-shield-alt"></i>
@@ -115,7 +115,7 @@
             </div>
 
             <div class="accreditations-section">
-                <h2>Akkreditációink és Elismeréseink</h2>
+                <h2 data-translate="about-accreditations-title">Akkreditációink és Elismeréseink</h2>
                 <div class="accred-grid">
                     <div class="accred-item">
                         <i class="fas fa-certificate"></i>
@@ -149,8 +149,8 @@
     <section class="instructors-section">
         <div class="container">
             <div class="section-header">
-                <h2>Oktatóink</h2>
-                <p>Tapasztalt szakemberek, akik szenvedélyesen oktatnak</p>
+                <h2 data-translate="instructors-title">Oktatóink</h2>
+                <p data-translate="instructors-subtitle">Tapasztalt szakemberek, akik szenvedélyesen oktatnak</p>
             </div>
 
             <div class="instructors-grid">
@@ -215,22 +215,22 @@
             <div class="stats-grid">
                 <div class="stat-item">
                     <div class="stat-number">38+</div>
-                    <div class="stat-label">Évnyi Tapasztalat</div>
+                    <div class="stat-label" data-translate="stat1">Évnyi Tapasztalat</div>
                 </div>
 
                 <div class="stat-item">
                     <div class="stat-number">10,000+</div>
-                    <div class="stat-label">Sikeres Vizsgázó</div>
+                    <div class="stat-label" data-translate="stat2">Sikeres Vizsgázó</div>
                 </div>
 
                 <div class="stat-item">
                     <div class="stat-number">25+</div>
-                    <div class="stat-label">Szakképzett Oktató</div>
+                    <div class="stat-label" data-translate="stat3">Szakképzett Oktató</div>
                 </div>
 
                 <div class="stat-item">
                     <div class="stat-number">98%</div>
-                    <div class="stat-label">Sikeres Arány</div>
+                    <div class="stat-label" data-translate="stat4">Sikeres Arány</div>
                 </div>
             </div>
         </div>
@@ -239,10 +239,10 @@
     <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
-            <h2>Csatlakozz hozzánk!</h2>
-            <p>Kezdd el karrieredet a Hajós Akadémiával, Magyarország vezető hajózási oktatási intézményével!</p>
+            <h2 data-translate="cta-about-title">Csatlakozz hozzánk!</h2>
+            <p data-translate="cta-about-subtitle">Kezdd el karrieredet a Hajós Akadémiával, Magyarország vezető hajózási oktatási intézményével!</p>
             <a href="contact.html" class="btn btn-primary btn-large">
-                <i class="fas fa-phone"></i> Kapcsolatfelvétel
+                <i class="fas fa-phone"></i> <span data-translate="btn-contact">Kapcsolatfelvétel</span>
             </a>
         </div>
     </section>
@@ -259,17 +259,17 @@
                 </div>
 
                 <div class="footer-section">
-                    <h4>Navigáció</h4>
+                    <h4 data-translate="footer-navigation">Navigáció</h4>
                     <ul class="footer-links">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="courses.html">Courses</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="courses.html" data-translate="nav-courses">Courses</a></li>
+                        <li><a href="about.html" data-translate="nav-about">About</a></li>
+                        <li><a href="contact.html" data-translate="nav-contact">Contact</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
-                    <h4>Kövess minket</h4>
+                    <h4 data-translate="footer-follow">Kövess minket</h4>
                     <div class="social-icons">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                         <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
@@ -279,15 +279,16 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2026 Hajós Akadémia - Minden jog fenntartva.</p>
+                <p data-translate="footer-copyright">&copy; 2026 Hajós Akadémia - Minden jog fenntartva.</p>
                 <div class="footer-legal">
-                    <a href="#">Adatkezelési Tájékoztató</a>
-                    <a href="#">Süti Szabályzat</a>
+                    <a href="#" data-translate="footer-privacy">Adatkezelési Tájékoztató</a>
+                    <a href="#" data-translate="footer-cookies">Süti Szabályzat</a>
                 </div>
             </div>
         </div>
     </footer>
 
+    <script src="translations.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
