--- a/site/certificates.html
+++ b/site/certificates.html
@@ -19,10 +19,10 @@
 
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
-                        <li><a href="courses.html" class="nav-link">Courses</a></li>
-                        <li><a href="certificates.html" class="nav-link active">Certificates & Permits</a></li>
-                        <li><a href="about.html" class="nav-link">About Us</a></li>
-                        <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+                        <li><a href="courses.html" class="nav-link" data-translate="nav-courses">Courses</a></li>
+                        <li><a href="certificates.html" class="nav-link active" data-translate="nav-certificates">Certificates & Permits</a></li>
+                        <li><a href="about.html" class="nav-link" data-translate="nav-about">About Us</a></li>
+                        <li><a href="contact.html" class="nav-link" data-translate="nav-contact">Contact Us</a></li>
                     </ul>
 
                     <div class="header-actions">
@@ -31,7 +31,7 @@
                             <button class="lang-btn" data-lang="en">🇺🇸</button>
                         </div>
                         <a href="#instructor-login" class="btn btn-instructor">
-                            <i class="fas fa-user"></i> Oktatói Felület
+                            <i class="fas fa-user"></i> <span data-translate="instructor-login">Oktatói Felület</span>
                         </a>
                     </div>
                 </nav>
@@ -48,8 +48,8 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Engedélyek & Jogosítványok</h1>
-            <p>Szerezd meg a szükséges engedélyeket és jogosítványokat szakképzett oktatóink segítségével</p>
+            <h1 data-translate="page-certificates-title">Engedélyek & Jogosítványok</h1>
+            <p data-translate="page-certificates-subtitle">Szerezd meg a szükséges engedélyeket és jogosítványokat szakképzett oktatóink segítségével</p>
         </div>
     </section>
 
@@ -61,10 +61,10 @@
                     <div class="certificate-icon">
                         <i class="fas fa-certificate"></i>
                     </div>
-                    <h3>Hajóvezetői Engedély</h3>
-                    <p>Belvízi hajóvezetői engedély megszerzése alapfokú és haladó szinten. A jogosítvány lehetővé teszi hajók vezetését belvízi utakon.</p>
+                    <h3 data-translate="cert1-title">Hajóvezetői Engedély</h3>
+                    <p data-translate="cert1-desc">Belvízi hajóvezetői engedély megszerzése alapfokú és haladó szinten. A jogosítvány lehetővé teszi hajók vezetését belvízi utakon.</p>
                     <div class="certificate-info">
-                        <h4>Követelmények:</h4>
+                        <h4 data-translate="requirements">Követelmények:</h4>
                         <ul>
                             <li><i class="fas fa-check"></i> Minimum 18 éves kor</li>
                             <li><i class="fas fa-check"></i> Érvényes orvosi alkalmasság</li>
@@ -73,7 +73,7 @@
                         </ul>
                     </div>
                     <a href="contact.html" class="btn btn-outline">
-                        Részletek <i class="fas fa-arrow-right"></i>
+                        <span data-translate="btn-details">Részletek</span> <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
 
@@ -81,10 +81,10 @@
                     <div class="certificate-icon">
                         <i class="fas fa-id-card"></i>
                     </div>
-                    <h3>Kapitányi Vizsga</h3>
-                    <p>Professzionális kapitányi képesítés megszerzése nemzetközi sztenderdek szerint. Kereskedelmi hajók vezetésére jogosít.</p>
+                    <h3 data-translate="cert2-title">Kapitányi Vizsga</h3>
+                    <p data-translate="cert2-desc">Professzionális kapitányi képesítés megszerzése nemzetközi sztenderdek szerint. Kereskedelmi hajók vezetésére jogosít.</p>
                     <div class="certificate-info">
-                        <h4>Követelmények:</h4>
+                        <h4 data-translate="requirements">Követelmények:</h4>
                         <ul>
                             <li><i class="fas fa-check"></i> Minimum 21 éves kor</li>
                             <li><i class="fas fa-check"></i> Hajóvezetői engedély</li>
@@ -93,7 +93,7 @@
                         </ul>
                     </div>
                     <a href="contact.html" class="btn btn-outline">
-                        Részletek <i class="fas fa-arrow-right"></i>
+                        <span data-translate="btn-details">Részletek</span> <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
 
@@ -101,10 +101,10 @@
                     <div class="certificate-icon">
                         <i class="fas fa-ship"></i>
                     </div>
-                    <h3>Speciális Engedélyek</h3>
-                    <p>Speciális járművekhez és körülményekhez szükséges engedélyek. Különleges hajótípusok és tevékenységek végzéséhez.</p>
+                    <h3 data-translate="cert3-title">Speciális Engedélyek</h3>
+                    <p data-translate="cert3-desc">Speciális járművekhez és körülményekhez szükséges engedélyek. Különleges hajótípusok és tevékenységek végzéséhez.</p>
                     <div class="certificate-info">
-                        <h4>Típusok:</h4>
+                        <h4 data-translate="types">Típusok:</h4>
                         <ul>
                             <li><i class="fas fa-check"></i> Vitorlás engedély</li>
                             <li><i class="fas fa-check"></i> Motoros hajó engedély</li>
@@ -113,7 +113,7 @@
                         </ul>
                     </div>
                     <a href="contact.html" class="btn btn-outline">
-                        Részletek <i class="fas fa-arrow-right"></i>
+                        <span data-translate="btn-details">Részletek</span> <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
 
@@ -121,10 +121,10 @@
                     <div class="certificate-icon">
                         <i class="fas fa-award"></i>
                     </div>
-                    <h3>Akkreditált Vizsgák</h3>
-                    <p>Államilag és nemzetközileg elismert vizsgák és tanúsítványok. Karriered fejlesztéséhez elengedhetetlen képesítések.</p>
+                    <h3 data-translate="cert4-title">Akkreditált Vizsgák</h3>
+                    <p data-translate="cert4-desc">Államilag és nemzetközileg elismert vizsgák és tanúsítványok. Karriered fejlesztéséhez elengedhetetlen képesítések.</p>
                     <div class="certificate-info">
-                        <h4>Elérhető vizsgák:</h4>
+                        <h4 data-translate="available-exams">Elérhető vizsgák:</h4>
                         <ul>
                             <li><i class="fas fa-check"></i> STCW alapvizsga</li>
                             <li><i class="fas fa-check"></i> VHF rádió kezelői vizsga</li>
@@ -133,7 +133,7 @@
                         </ul>
                     </div>
                     <a href="contact.html" class="btn btn-outline">
-                        Részletek <i class="fas fa-arrow-right"></i>
+                        <span data-translate="btn-details">Részletek</span> <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
 
@@ -144,7 +144,7 @@
                     <h3>Navigációs Engedély</h3>
                     <p>Haladó navigációs ismeretek és engedélyek. Komplex navigációs feladatok elvégzésére való képesítés megszerzése.</p>
                     <div class="certificate-info">
-                        <h4>Követelmények:</h4>
+                        <h4 data-translate="requirements">Követelmények:</h4>
                         <ul>
                             <li><i class="fas fa-check"></i> Alapszintű hajóvezetői engedély</li>
                             <li><i class="fas fa-check"></i> Navigációs elméleti ismeretek</li>
@@ -153,7 +153,7 @@
                         </ul>
                     </div>
                     <a href="contact.html" class="btn btn-outline">
-                        Részletek <i class="fas fa-arrow-right"></i>
+                        <span data-translate="btn-details">Részletek</span> <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
 
@@ -164,7 +164,7 @@
                     <h3>Biztonsági Képesítés</h3>
                     <p>Hajózási biztonsági ismeretek és mentési technikák. Vészhelyzetek kezelésére való felkészítés és képesítés.</p>
                     <div class="certificate-info">
-                        <h4>Tartalom:</h4>
+                        <h4 data-translate="content">Tartalom:</h4>
                         <ul>
                             <li><i class="fas fa-check"></i> Túlélési technikák</li>
                             <li><i class="fas fa-check"></i> Mentőcsónak kezelés</li>
@@ -173,7 +173,7 @@
                         </ul>
                     </div>
                     <a href="contact.html" class="btn btn-outline">
-                        Részletek <i class="fas fa-arrow-right"></i>
+                        <span data-translate="btn-details">Részletek</span> <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
             </div>
@@ -184,33 +184,33 @@
     <section class="process-section">
         <div class="container">
             <div class="section-header">
-                <h2>Hogyan szerezheted meg az engedélyed?</h2>
-                <p>Egyszerű, átlátható folyamat lépésről lépésre</p>
+                <h2 data-translate="process-title">Hogyan szerezheted meg az engedélyed?</h2>
+                <p data-translate="process-subtitle">Egyszerű, átlátható folyamat lépésről lépésre</p>
             </div>
 
             <div class="process-steps">
                 <div class="step">
                     <div class="step-number">1</div>
-                    <h3>Jelentkezés</h3>
-                    <p>Válaszd ki a számodra megfelelő engedélyt és jelentkezz online vagy személyesen.</p>
+                    <h3 data-translate="step1-title">Jelentkezés</h3>
+                    <p data-translate="step1-desc">Válaszd ki a számodra megfelelő engedélyt és jelentkezz online vagy személyesen.</p>
                 </div>
 
                 <div class="step">
                     <div class="step-number">2</div>
-                    <h3>Képzés</h3>
-                    <p>Részt veszel az elméleti és gyakorlati képzéseken szakképzett oktatóink vezetésével.</p>
+                    <h3 data-translate="step2-title">Képzés</h3>
+                    <p data-translate="step2-desc">Részt veszel az elméleti és gyakorlati képzéseken szakképzett oktatóink vezetésével.</p>
                 </div>
 
                 <div class="step">
                     <div class="step-number">3</div>
-                    <h3>Vizsga</h3>
-                    <p>Teljesíted az elméleti és gyakorlati vizsgát akkreditált vizsgabiztosok előtt.</p>
+                    <h3 data-translate="step3-title">Vizsga</h3>
+                    <p data-translate="step3-desc">Teljesíted az elméleti és gyakorlati vizsgát akkreditált vizsgabiztosok előtt.</p>
                 </div>
 
                 <div class="step">
                     <div class="step-number">4</div>
-                    <h3>Engedély</h3>
-                    <p>Sikeres vizsga után átveheted az hivatalosan elismert engedélyedet vagy tanúsítványodat.</p>
+                    <h3 data-translate="step4-title">Engedély</h3>
+                    <p data-translate="step4-desc">Sikeres vizsga után átveheted az hivatalosan elismert engedélyedet vagy tanúsítványodat.</p>
                 </div>
             </div>
         </div>
@@ -219,10 +219,10 @@
     <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
-            <h2>Készen állsz megszerezni az engedélyedet?</h2>
-            <p>Lépj velünk kapcsolatba és kezdd el a felkészülést még ma!</p>
+            <h2 data-translate="cta-certificates-title">Készen állsz megszerezni az engedélyedet?</h2>
+            <p data-translate="cta-certificates-subtitle">Lépj velünk kapcsolatba és kezdd el a felkészülést még ma!</p>
             <a href="contact.html" class="btn btn-primary btn-large">
-                <i class="fas fa-phone"></i> Kapcsolatfelvétel
+                <i class="fas fa-phone"></i> <span data-translate="btn-contact">Kapcsolatfelvétel</span>
             </a>
         </div>
     </section>
@@ -239,17 +239,17 @@
                 </div>
 
                 <div class="footer-section">
-                    <h4>Navigáció</h4>
+                    <h4 data-translate="footer-navigation">Navigáció</h4>
                     <ul class="footer-links">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="courses.html">Courses</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="courses.html" data-translate="nav-courses">Courses</a></li>
+                        <li><a href="about.html" data-translate="nav-about">About</a></li>
+                        <li><a href="contact.html" data-translate="nav-contact">Contact</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
-                    <h4>Kövess minket</h4>
+                    <h4 data-translate="footer-follow">Kövess minket</h4>
                     <div class="social-icons">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                         <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
@@ -259,15 +259,16 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2026 Hajós Akadémia - Minden jog fenntartva.</p>
+                <p data-translate="footer-copyright">&copy; 2026 Hajós Akadémia - Minden jog fenntartva.</p>
                 <div class="footer-legal">
-                    <a href="#">Adatkezelési Tájékoztató</a>
-                    <a href="#">Süti Szabályzat</a>
+                    <a href="#" data-translate="footer-privacy">Adatkezelési Tájékoztató</a>
+                    <a href="#" data-translate="footer-cookies">Süti Szabályzat</a>
                 </div>
             </div>
         </div>
     </footer>
 
+    <script src="translations.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
