--- a/site/courses.html
+++ b/site/courses.html
@@ -19,10 +19,10 @@
 
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
-                        <li><a href="courses.html" class="nav-link active">Courses</a></li>
-                        <li><a href="certificates.html" class="nav-link">Certificates & Permits</a></li>
-                        <li><a href="about.html" class="nav-link">About Us</a></li>
-                        <li><a href="contact.html" class="nav-link">Contact Us</a></li>
+                        <li><a href="courses.html" class="nav-link active" data-translate="nav-courses">Courses</a></li>
+                        <li><a href="certificates.html" class="nav-link" data-translate="nav-certificates">Certificates & Permits</a></li>
+                        <li><a href="about.html" class="nav-link" data-translate="nav-about">About Us</a></li>
+                        <li><a href="contact.html" class="nav-link" data-translate="nav-contact">Contact Us</a></li>
                     </ul>
 
                     <div class="header-actions">
@@ -31,7 +31,7 @@
                             <button class="lang-btn" data-lang="en">🇺🇸</button>
                         </div>
                         <a href="#instructor-login" class="btn btn-instructor">
-                            <i class="fas fa-user"></i> Oktatói Felület
+                            <i class="fas fa-user"></i> <span data-translate="instructor-login">Oktatói Felület</span>
                         </a>
                     </div>
                 </nav>
@@ -48,8 +48,8 @@
     <!-- Page Header -->
     <section class="page-header">
         <div class="container">
-            <h1>Tanfolyamaink</h1>
-            <p>Válassz a szakmai képzéseink közül és szerezd meg a szükséges tudást és képesítést</p>
+            <h1 data-translate="page-courses-title">Tanfolyamaink</h1>
+            <p data-translate="page-courses-subtitle">Válassz a szakmai képzéseink közül és szerezd meg a szükséges tudást és képesítést</p>
         </div>
     </section>
 
@@ -62,8 +62,8 @@
                         <img src="https://via.placeholder.com/400x250?text=Hajóskapitány+Képzés" alt="Hajóskapitány Képzés">
                     </div>
                     <div class="course-content">
-                        <h3>Hajóskapitány Képzés</h3>
-                        <p>Átfogó képzés hajóskapitányoknak, amely tartalmazza az elméleti és gyakorlati ismereteket a biztonságos hajózáshoz.</p>
+                        <h3 data-translate="course1-title">Hajóskapitány Képzés</h3>
+                        <p data-translate="course1-detail-desc">Átfogó képzés hajóskapitányoknak, amely tartalmazza az elméleti és gyakorlati ismereteket a biztonságos hajózáshoz.</p>
 
                         <div class="course-details">
                             <div class="detail-item">
@@ -81,7 +81,7 @@
                         </div>
 
                         <div class="course-features">
-                            <h4>Mit tanulsz?</h4>
+                            <h4 data-translate="what-you-learn">Mit tanulsz?</h4>
                             <ul>
                                 <li><i class="fas fa-check"></i> Hajózási szabályok és előírások</li>
                                 <li><i class="fas fa-check"></i> Navigációs ismeretek</li>
@@ -92,7 +92,7 @@
                         </div>
 
                         <a href="contact.html" class="btn btn-primary">
-                            <i class="fas fa-envelope"></i> Jelentkezés
+                            <i class="fas fa-envelope"></i> <span data-translate="btn-apply">Jelentkezés</span>
                         </a>
                     </div>
                 </div>
@@ -102,8 +102,8 @@
                         <img src="https://via.placeholder.com/400x250?text=Szimulátor+Tréning" alt="Szimulátor Tréning">
                     </div>
                     <div class="course-content">
-                        <h3>Szimulátor Tréning</h3>
-                        <p>Modern szimulátoros gyakorlatok valós helyzetekben, szakképzett oktatók vezetésével. A legújabb technológiával felszerelt központunkban.</p>
+                        <h3 data-translate="course2-title">Szimulátor Tréning</h3>
+                        <p data-translate="course2-detail-desc">Modern szimulátoros gyakorlatok valós helyzetekben, szakképzett oktatók vezetésével. A legújabb technológiával felszerelt központunkban.</p>
 
                         <div class="course-details">
                             <div class="detail-item">
@@ -121,7 +121,7 @@
                         </div>
 
                         <div class="course-features">
-                            <h4>Mit tanulsz?</h4>
+                            <h4 data-translate="what-you-learn">Mit tanulsz?</h4>
                             <ul>
                                 <li><i class="fas fa-check"></i> Szimulátoros hajóvezetés</li>
                                 <li><i class="fas fa-check"></i> Különböző időjárási körülmények</li>
@@ -132,7 +132,7 @@
                         </div>
 
                         <a href="contact.html" class="btn btn-primary">
-                            <i class="fas fa-envelope"></i> Jelentkezés
+                            <i class="fas fa-envelope"></i> <span data-translate="btn-apply">Jelentkezés</span>
                         </a>
                     </div>
                 </div>
@@ -142,8 +142,8 @@
                         <img src="https://via.placeholder.com/400x250?text=Engedély+Megújítás" alt="Engedély Megújítás">
                     </div>
                     <div class="course-content">
-                        <h3>Engedély Megújítás</h3>
-                        <p>Engedélyek és jogosítványok megújítása, továbbképzések tapasztalt szakembereknek. Gyors és hatékony folyamat.</p>
+                        <h3 data-translate="course3-title">Engedély Megújítás</h3>
+                        <p data-translate="course3-detail-desc">Engedélyek és jogosítványok megújítása, továbbképzések tapasztalt szakembereknek. Gyors és hatékony folyamat.</p>
 
                         <div class="course-details">
                             <div class="detail-item">
@@ -161,7 +161,7 @@
                         </div>
 
                         <div class="course-features">
-                            <h4>Mit tanulsz?</h4>
+                            <h4 data-translate="what-you-learn">Mit tanulsz?</h4>
                             <ul>
                                 <li><i class="fas fa-check"></i> Új szabályozások és változások</li>
                                 <li><i class="fas fa-check"></i> Biztonsági előírások frissítése</li>
@@ -172,7 +172,7 @@
                         </div>
 
                         <a href="contact.html" class="btn btn-primary">
-                            <i class="fas fa-envelope"></i> Jelentkezés
+                            <i class="fas fa-envelope"></i> <span data-translate="btn-apply">Jelentkezés</span>
                         </a>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                         </div>
 
                         <div class="course-features">
-                            <h4>Mit tanulsz?</h4>
+                            <h4 data-translate="what-you-learn">Mit tanulsz?</h4>
                             <ul>
                                 <li><i class="fas fa-check"></i> Vitorlázás alapjai</li>
                                 <li><i class="fas fa-check"></i> Szélirány és vitorlaállítás</li>
@@ -212,7 +212,7 @@
                         </div>
 
                         <a href="contact.html" class="btn btn-primary">
-                            <i class="fas fa-envelope"></i> Jelentkezés
+                            <i class="fas fa-envelope"></i> <span data-translate="btn-apply">Jelentkezés</span>
                         </a>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
                         </div>
 
                         <div class="course-features">
-                            <h4>Mit tanulsz?</h4>
+                            <h4 data-translate="what-you-learn">Mit tanulsz?</h4>
                             <ul>
                                 <li><i class="fas fa-check"></i> Motorkezelés és karbantartás</li>
                                 <li><i class="fas fa-check"></i> Hajóvezetési technikák</li>
@@ -252,7 +252,7 @@
                         </div>
 
                         <a href="contact.html" class="btn btn-primary">
-                            <i class="fas fa-envelope"></i> Jelentkezés
+                            <i class="fas fa-envelope"></i> <span data-translate="btn-apply">Jelentkezés</span>
                         </a>
                     </div>
                 </div>
@@ -281,7 +281,7 @@
                         </div>
 
                         <div class="course-features">
-                            <h4>Mit tanulsz?</h4>
+                            <h4 data-translate="what-you-learn">Mit tanulsz?</h4>
                             <ul>
                                 <li><i class="fas fa-check"></i> Rádiófrekvenciák és csatornák</li>
                                 <li><i class="fas fa-check"></i> Kommunikációs protokollok</li>
@@ -292,7 +292,7 @@
                         </div>
 
                         <a href="contact.html" class="btn btn-primary">
-                            <i class="fas fa-envelope"></i> Jelentkezés
+                            <i class="fas fa-envelope"></i> <span data-translate="btn-apply">Jelentkezés</span>
                         </a>
                     </div>
                 </div>
@@ -303,10 +303,10 @@
     <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
-            <h2>Kérdésed van a tanfolyamokkal kapcsolatban?</h2>
-            <p>Vedd fel velünk a kapcsolatot, szakértőink készséggel állnak rendelkezésedre!</p>
+            <h2 data-translate="cta-courses-title">Kérdésed van a tanfolyamokkal kapcsolatban?</h2>
+            <p data-translate="cta-courses-subtitle">Vedd fel velünk a kapcsolatot, szakértőink készséggel állnak rendelkezésedre!</p>
             <a href="contact.html" class="btn btn-primary btn-large">
-                <i class="fas fa-phone"></i> Kapcsolatfelvétel
+                <i class="fas fa-phone"></i> <span data-translate="btn-contact">Kapcsolatfelvétel</span>
             </a>
         </div>
     </section>
@@ -323,17 +323,17 @@
                 </div>
 
                 <div class="footer-section">
-                    <h4>Navigáció</h4>
+                    <h4 data-translate="footer-navigation">Navigáció</h4>
                     <ul class="footer-links">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="courses.html">Courses</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="courses.html" data-translate="nav-courses">Courses</a></li>
+                        <li><a href="about.html" data-translate="nav-about">About</a></li>
+                        <li><a href="contact.html" data-translate="nav-contact">Contact</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-section">
-                    <h4>Kövess minket</h4>
+                    <h4 data-translate="footer-follow">Kövess minket</h4>
                     <div class="social-icons">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                         <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
@@ -343,15 +343,16 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2026 Hajós Akadémia - Minden jog fenntartva.</p>
+                <p data-translate="footer-copyright">&copy; 2026 Hajós Akadémia - Minden jog fenntartva.</p>
                 <div class="footer-legal">
-                    <a href="#">Adatkezelési Tájékoztató</a>
-                    <a href="#">Süti Szabályzat</a>
+                    <a href="#" data-translate="footer-privacy">Adatkezelési Tájékoztató</a>
+                    <a href="#" data-translate="footer-cookies">Süti Szabályzat</a>
                 </div>
             </div>
         </div>
     </footer>
 
+    <script src="translations.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
