--- a/site/index.html
+++ b/site/index.html
@@ -108,11 +108,11 @@
                         <img src="https://via.placeholder.com/400x250?text=Tanfolyam+1" alt="Tanfolyam 1">
                     </div>
                     <div class="course-content">
-                        <h3>Hajóskapitány Képzés</h3>
-                        <p>Átfogó képzés hajóskapitányoknak, amely tartalmazza az elméleti és gyakorlati ismereteket a
+                        <h3 data-translate="course1-title">Hajóskapitány Képzés</h3>
+                        <p data-translate="course1-desc">Átfogó képzés hajóskapitányoknak, amely tartalmazza az elméleti és gyakorlati ismereteket a
                             biztonságos hajózáshoz.</p>
-                        <a href="#" class="btn btn-outline">
-                            Részletek <i class="fas fa-arrow-right"></i>
+                        <a href="courses.html" class="btn btn-outline">
+                            <span data-translate="btn-details">Részletek</span> <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
                 </div>
@@ -122,10 +122,10 @@
                         <img src="https://via.placeholder.com/400x250?text=Tanfolyam+2" alt="Tanfolyam 2">
                     </div>
                     <div class="course-content">
-                        <h3>Szimulátor Tréning</h3>
-                        <p>Modern szimulátoros gyakorlatok valós helyzetekben, szakképzett oktatók vezetésével.</p>
-                        <a href="#" class="btn btn-outline">
-                            Részletek <i class="fas fa-arrow-right"></i>
+                        <h3 data-translate="course2-title">Szimulátor Tréning</h3>
+                        <p data-translate="course2-desc">Modern szimulátoros gyakorlatok valós helyzetekben, szakképzett oktatók vezetésével.</p>
+                        <a href="courses.html" class="btn btn-outline">
+                            <span data-translate="btn-details">Részletek</span> <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
                 </div>
@@ -135,10 +135,10 @@
                         <img src="https://via.placeholder.com/400x250?text=Tanfolyam+3" alt="Tanfolyam 3">
                     </div>
                     <div class="course-content">
-                        <h3>Engedély Megújítás</h3>
-                        <p>Engedélyek és jogosítványok megújítása, továbbképzések tapasztalt szakembereknek.</p>
-                        <a href="#" class="btn btn-outline">
-                            Részletek <i class="fas fa-arrow-right"></i>
+                        <h3 data-translate="course3-title">Engedély Megújítás</h3>
+                        <p data-translate="course3-desc">Engedélyek és jogosítványok megújítása, továbbképzések tapasztalt szakembereknek.</p>
+                        <a href="courses.html" class="btn btn-outline">
+                            <span data-translate="btn-details">Részletek</span> <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
                 </div>
@@ -159,32 +159,32 @@
                     <div class="certificate-icon">
                         <i class="fas fa-certificate"></i>
                     </div>
-                    <h3>Hajóvezetői Engedély</h3>
-                    <p>Belvízi hajóvezetői engedély megszerzése alapfokú és haladó szinten.</p>
+                    <h3 data-translate="cert1-title">Hajóvezetői Engedély</h3>
+                    <p data-translate="cert1-desc">Belvízi hajóvezetői engedély megszerzése alapfokú és haladó szinten.</p>
                 </div>
 
                 <div class="certificate-item">
                     <div class="certificate-icon">
                         <i class="fas fa-id-card"></i>
                     </div>
-                    <h3>Kapitányi Vizsga</h3>
-                    <p>Professzionális kapitányi képesítés megszerzése nemzetközi sztenderdek szerint.</p>
+                    <h3 data-translate="cert2-title">Kapitányi Vizsga</h3>
+                    <p data-translate="cert2-desc">Professzionális kapitányi képesítés megszerzése nemzetközi sztenderdek szerint.</p>
                 </div>
 
                 <div class="certificate-item">
                     <div class="certificate-icon">
                         <i class="fas fa-ship"></i>
                     </div>
-                    <h3>Speciális Engedélyek</h3>
-                    <p>Speciális járművekhez és körülményekhez szükséges engedélyek.</p>
+                    <h3 data-translate="cert3-title">Speciális Engedélyek</h3>
+                    <p data-translate="cert3-desc">Speciális járművekhez és körülményekhez szükséges engedélyek.</p>
                 </div>
 
                 <div class="certificate-item">
                     <div class="certificate-icon">
                         <i class="fas fa-award"></i>
                     </div>
-                    <h3>Akkreditált Vizsgák</h3>
-                    <p>Államilag és nemzetközileg elismert vizsgák és tanúsítványok.</p>
+                    <h3 data-translate="cert4-title">Akkreditált Vizsgák</h3>
+                    <p data-translate="cert4-desc">Államilag és nemzetközileg elismert vizsgák és tanúsítványok.</p>
                 </div>
             </div>
         </div>
